add notifier & update swagger
